<resources>
    <string name="app_name">Tourist Rent A Friend</string>
    <string name="all_login">Login</string>
    <string name="all_register">Register</string>
    <string name="forgot_password">Forgot password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name_all">Firstname</string>
    <string name="last_name_all">Lastname</string>
    <string name="country_all">Country</string>
    <string name="price_all">Price</string>
    <string name="description_all">Description</string>
    <string name="country_hint">Type in your country and select it from the dropdown</string>
    <string name="birth_date_all">Birthdate</string>
    <string name="city_name_all">City name</string>
    <string name="repeat_password_all">Repeat password</string>
    <string name="username_email">Username (email)</string>
    <string name="title_activity_bottom_dashboard">BottomDashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="current_user">Profile</string>
    <string name="logout_all">Logout</string>
    <string name="title_search">Search</string>
    <string name="full_name_all">Full name</string>
    <string name="age_all">Age</string>
    <string name="rent_all">Rent</string>
    <string name="user_details_all">User details</string>
    <string name="users_country_all">Users from {countryName}</string>
    <string name="title_messages">Messages</string>
    <string name="send_all">Send</string>
    <string name="chat_with">{chatWith}</string>
    <string name="title_settings">Settings</string>
    <string name="toggle_theme_all">Toggle theme</string>
    <string name="night_mode_on">Night mode enabled?</string>
</resources>
