<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_user_profile_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        app:srcCompat="@android:drawable/ic_menu_report_image" />

    <TextView
        android:id="@+id/text_user_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_name_all"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_user_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/country_all" />

        <TextView
            android:id="@+id/text_user_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/city_name_all" />
    </LinearLayout>

</LinearLayout>