<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_current_user"
        android:name="com.qverkk.touristrentafriend.ui.dashboard.ui.currentUser.CurrentUserFragment"
        android:label="@string/current_user"
        tools:layout="@layout/fragment_current_user" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.qverkk.touristrentafriend.ui.dashboard.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_fullUserFragment"
            app:destination="@id/fullUserFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.qverkk.touristrentafriend.ui.dashboard.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_navigation_dashboard_to_countryUsersFragment"
            app:destination="@id/countryUsersFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.qverkk.touristrentafriend.ui.dashboard.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/fullUserFragment"
        android:name="com.qverkk.touristrentafriend.ui.dashboard.ui.home.FullUserFragment"
        android:label="@string/user_details_all"
        tools:layout="@layout/fragment_full_user">
        <action
            android:id="@+id/action_fullUserFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_fullUserFragment_to_countryUsersFragment"
            app:destination="@id/countryUsersFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/countryUsersFragment"
        android:name="com.qverkk.touristrentafriend.ui.dashboard.ui.dashboard.countryusers.CountryUsersFragment"
        android:label="@string/users_country_all"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_countryUsersFragment_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_countryUsersFragment_to_fullUserFragment"
            app:destination="@id/fullUserFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_message"
        android:name="com.qverkk.touristrentafriend.ui.dashboard.ui.messaging.MessagingFragment"
        android:label="Messaging center"
        tools:layout="@layout/fragment_messaging">
        <action
            android:id="@+id/action_navigation_message_to_directChatFragment"
            app:destination="@id/directChatFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/directChatFragment"
        android:name="com.qverkk.touristrentafriend.ui.dashboard.ui.messaging.chat.DirectChatFragment"
        android:label="@string/chat_with"
        tools:layout="@layout/fragment_direct_chat">
        <action
            android:id="@+id/action_directChatFragment_to_navigation_message"
            app:destination="@id/navigation_message"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
</navigation>